Provide a way to start a server with the examples installed.